* Fix case step align middle.

--- a/module/testsuite/css/createcase.css
+++ b/module/testsuite/css/createcase.css
@@ -1,4 +1,4 @@
-#steps .step-id {text-align: center}
+#steps .step-id {text-align: center;vertical-align: middle}
 #steps .step-item-id {background-color: transparent; border: none; display: none; width: 30px; padding-left: 0; padding-right: 0; text-align: right; padding-right: 8px}
 #steps .checkbox-inline input[type="checkbox"] {top: -2px}
 #steps .btn-group .btn {padding-left: 0; padding-right: 0; min-width: 30px;}
